Fixed extra margine

--- a/src/assets/style/_project.scss
+++ b/src/assets/style/_project.scss
@@ -6,7 +6,7 @@
     .project-card {
         background-color: colors.$bg-color-2;
         margin-bottom: 48px;
-        padding: 2.5rem;
+        padding: 1rem;
         display: grid;
         grid-template-rows: 50px 1fr;
         grid-template-columns: 1fr 1fr;
@@ -72,6 +72,7 @@
                 }
                 
                 .project-link-button {
+                    display: inline-block;
                     &:not(:first-child) {
                         margin-left: 12px;
                     }
